Fix some of the spacing

--- a/css/main.css
+++ b/css/main.css
@@ -23,17 +23,20 @@ h1 {
 
 p {
   padding-top: .5rem;
+  padding-bottom: .5rem;
   margin-bottom: 0;
+  max-width: 28em;
 }
 
 div {
-  padding: .5rem;
-  padding-top: 0;
+  padding-top: .6rem;
+  padding-bottom: .6rem;
 }
 
 .details {
-  padding-bottom: 1rem;
-  padding-top: 1rem;
+  padding-top: .8rem;
+  padding-bottom: .5rem;
+  padding-right: 1rem;
 }
 
 @media only screen and (min-width: 60em) {
